--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2255,15 +2255,16 @@ aside .links--and--logo:after {
   width: 100% !important;
   height: 100vh;
   /* background: #000; */
-  background: #131a47;
+  background: linear-gradient(to right, #162655, #0f0b46);
   display: flex;
 }
 .main-content main {
   overflow-y: hidden;
   overflow-x: hidden;
-  width: calc((100%) - (180px));
-  background: linear-gradient(to right, #162655, #0f0b46);
+  width: 100%;
+  background: url('../img/auth_bg.png') no-repeat;
   height: 100vh;
+  background-size: cover;
 }
 @media (max-width: 1174px) {
   .main-content main {
