--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1616,7 +1616,6 @@ aside .links--and--logo:after {
   position: relative;
   width: 100%;
   height: 100%;
-  overflow-y: auto
 }
 
 @media (max-width: 1174px) {
@@ -2627,23 +2626,19 @@ aside .links--and--logo:after {
   overflow-x: hidden;
   height: calc((100vh) - (50px));
   width: 100%;
-  padding: 10px 50px 0
 }
 
-@media (max-width: 1174px) {
-  .main-content main .dash-body {
-    padding: 10px 30px 20px
-  }
-}
 
 .main-content main .dash-body > div {
   height: 100%;
-  width: 100%
+  width: 100%;
+  padding: 10px 30px 0;
+  overflow-y: auto;
 }
 
 @media (max-width: 1174px) {
   .main-content main .dash-body > div {
-    padding-bottom: 50px;
+    padding-bottom: 150px;
   }
 }
 
@@ -3397,4 +3392,31 @@ input.normal--input[type=submit] {
 
 .cash--crypto--btns > div .sub-button {
   margin-bottom: 30px;
+}
+
+@media (min-width: 1175px) {
+  .cash--crypto--btns > div .sub-button:first-child {
+    margin-right: 60px;
+  }
+}
+
+@media (max-width: 767px) {
+  .main-content main > section{
+    height: calc(100vh - 50px);
+  }
+}
+
+
+.card-links.row {
+  margin: 0;
+}
+
+
+.main-content main .dash-body > div .card-links .link-card.no-img {
+  height: unset;
+  padding-bottom: 0;
+}
+
+.main-content main .dash-body > div .card-links .link-card.no-img > .mt-20 {
+  margin-top: 0!important;
 }
