--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3580,3 +3580,36 @@ input.normal--input[type=submit] {
     width: calc((25%) - (10px));
   }
 }
+
+
+.ivu-table td, .ivu-table th {
+  background-color: transparent;
+  color: #ffffff;
+  border: none;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.07);
+}
+
+.ivu-table-wrapper {
+  border: none;
+  min-width: 600px;
+}
+
+.ivu-table:before, .ivu-table:after {
+  background: transparent;
+}
+
+.ivu-table th {
+  border-bottom: none;
+}
+
+tbody tr:last-child td {
+  border-bottom: none;
+}
+
+.ivu-table {
+  background: transparent;
+}
+
+tr.ivu-table-row-hover td {
+  background: rgba(11, 14, 59, 0.31);
+}
