--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1117,7 +1117,7 @@ form div input::placeholder {
   vertical-align: bottom
 }
 
-form div .prefix-icon {
+form div img, form div .prefix-icon {
   position: absolute;
   left: 25px;
   top: 30px;
@@ -3670,4 +3670,43 @@ div.prefix-icon {
   padding-left: 80px;
   font-size: .9rem;
   font-weight: 600;
+}
+
+.withdraw--modal .modal-content .main-modal .account--smart-card .bank--account .ivu-select-selection {
+  border: solid 2px #f9921b;
+}
+
+form div .ivu-select-selection {
+  border-radius: 10px;
+  height: 55px!important;
+  width: 100%;
+  background: #0c0a3c;
+  color: rgba(255, 255, 255, .72);
+  padding-left: 50px;
+  padding-top: 20px;
+}
+
+.ivu-select-dropdown {
+  background-color: #131a4b;
+}
+
+.ivu-select-dropdown li {
+  color: #ffffff;
+  cursor: pointer;
+  font-size: .9rem!important;
+}
+
+.ivu-select-item:hover {
+  background: #f3f3f3;
+  color: #131a4b;
+}
+
+.ivu-select-dropdown .ivu-select-item-focus {
+  background: #f3f3f3;
+  color: #131a4b;
+}
+
+.ivu-select-single .ivu-select-selection .ivu-select-placeholder, .ivu-select-single .ivu-select-selection .ivu-select-selected-value {
+  padding: 0;
+  font-size: .9rem;
 }
